--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@babel/runtime": "^7.6.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@types/react-router-dom": "^5.1.7",
     "babel-loader": "~8.1",
     "css-loader": "^5.0.0",
