--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.912.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
@@ -55,6 +56,7 @@
     "express-handlebars": "^5.3.2",
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "objection": "^2.2.15",
     "objection-unique": "^1.2.1",
     "passport": "^0.4.1",
