--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react": "~16.13",
     "react-dom": "~16.13",
     "react-hot-loader": "^4.12.21",
+    "react-image-crop": "^8.6.9",
     "react-router-dom": "5.2",
     "redbox-react": "~1.6",
     "sass-loader": "^8.0.2",
